--- a/index.html
+++ b/index.html
@@ -4,29 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo list application vanilla JavaScript</title>
+    <link rel="stylesheet" href="assets/css/main.css">
     <script type="text/javascript" src="assets/js/todos.js"></script>
+       <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="todosContainer">
-        <div class="dailyTodos">
-            <h2>Daily todos will go here</h2>
-            <ul>
-                <li>Daily todo 1</li>
-            </ul>
+    <header>
+        <h1>Alexmitchelldev's to-do list application</h1>
+    </header>
+    <section id="todoAppSection">
+        <div class="todoListsContainer">
+            <div class="todoListsGrid">
+                <div class="dailyTodos">
+                    <h2>Daily todos</h2>
+                    <ul class="todosUl">
+                        <li>Daily todo 1</li>
+                    </ul>
+                </div>
+                <div class="weeklyTodos">
+                    <h2>Weekly todos</h2>
+                    <ul class="todosUl">
+                        <li>Weekly todo 1</li>
+                    </ul>
+                </div>
+                <div class="specificTodos">
+                    <h2>Specific todos</h2>
+                    <ul class="todosUl">
+                        <li>Specific todo 1</li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div class="weeklyTodos">
-            <h2>Weekly todos will go here</h2>
-            <ul>
-                <li>Weekly todo 1</li>
-            </ul>
-        </div>
-        <div class="specificTodos">
-            <h2>Specific todos will go here</h2>
-            <ul>
-                <li>Specific todo 1</li>
-            </ul>
-        </div>
-    </div>
+    </section>
     <!-- <h1>This is my todo list application in Vanilla JavaScript</h1>
     <ul id="todoUl">
         <li>Todo 1</li>
